Refactor various components